--- a/resources/html/travel/article.html
+++ b/resources/html/travel/article.html
@@ -6,7 +6,7 @@
             <h1>{{article.title}}</h1>
             <div>{{article.body|safe}}</div>
         </div>
-        <div class="column is-one-third">
+        <div class="is-hidden-mobile column is-one-third">
             {% include "svg/Nepal.svg" %}
         </div>
     </div>
