adds dates to articles

--- a/resources/html/travel/article.html
+++ b/resources/html/travel/article.html
@@ -3,7 +3,7 @@
 <div class="content">
     <div class="columns">
         <div class="column is-two-thirds">
-            <h1>{{article.title}}</h1>
+            <h1>{{article.date}} | {{article.title}}</h1>
             <div>{{article.body|safe}}</div>
         </div>
         <div class="is-hidden-mobile column is-one-third">
