--- a/resources/html/travel/trip/subtrip.html
+++ b/resources/html/travel/trip/subtrip.html
@@ -5,7 +5,8 @@
     <p>{{subtrip.description}}</p>
     {% for article in articles %}
         {% ifequal article.tripid subtrip.id %}
-            <a href="{{article.url}}""><h5>{{ article.title }}</h5>
+            <a href="{{article.url}}"">
+            <h5>{{ article.date }} | {{ article.title }}</h5>
             <div>{{ article.preview|add:.:.:. }}</div></a>
         {% endifequal %}
     {% endfor %}
